new Transaction.cpp new Special.h new Special.cpp changed Transaction.h changed main.h changed main.cpp

--- a/PersonalFinanceManager/PersonalFinanceManager.vcxproj
+++ b/PersonalFinanceManager/PersonalFinanceManager.vcxproj
@@ -124,9 +124,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Special.cpp" />
+    <ClCompile Include="Transaction.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h" />
+    <ClInclude Include="Special.h" />
     <ClInclude Include="Transaction.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
