--- a/PersonalFinanceManager/PersonalFinanceManager.vcxproj.filters
+++ b/PersonalFinanceManager/PersonalFinanceManager.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Special.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Autorazation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Special.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Autorization.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
