--- a/PersonalFinanceManager/PersonalFinanceManager.vcxproj.filters
+++ b/PersonalFinanceManager/PersonalFinanceManager.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Autorazation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Database.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -41,5 +44,11 @@
     <ClInclude Include="Autorization.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Database.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\docker-compose.yml" />
   </ItemGroup>
 </Project>
