--- a/PersonalFinanceManager/PersonalFinanceManager.vcxproj
+++ b/PersonalFinanceManager/PersonalFinanceManager.vcxproj
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Autorization.h" />
+    <ClInclude Include="common.h" />
     <ClInclude Include="Database.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="Special.h" />
