--- a/PersonalFinanceManager/PersonalFinanceManager.vcxproj.filters
+++ b/PersonalFinanceManager/PersonalFinanceManager.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="Database.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\docker-compose.yml" />
